Happy Birthday kenn

--- a/valentine-confession/71/valentine-confession.html
+++ b/valentine-confession/71/valentine-confession.html
@@ -22,7 +22,7 @@
                 <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear Crush,</h1>
                 <p> 
                     <span>
-                        &emsp; I've been keeping this in for a while, but I think Valentine's Day is the perfect time to say it—you’re the reason my days feel brighter. Every little moment with you means more than I can put into words. Your smile, your laughter, the way you make everything feel lighter—it all makes my heart race in the best way possible.
+                        &emsp; halo semua ini cuma buat ngetes ya ges ya
                     </span>
                     <br> <br>
                     <span>
